src/tests/integration/snapshots/mosaic__tests__integration__compatibility__bash_cursor_linewrap-3.snap
---
source: src/tests/integration/compatibility.rs
expression: snapshot
---
⋊> ~/c/mosaic on main ⨯ bash                                                                                16:00:06
[aram@green mosaic]$ 12345678912345678912345678912345678912345678912345678912345678912345678912345678912345678912345
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
Bye from Mosaic!█                                                                                                   
