src/tests/integration/snapshots/mosaic__tests__integration__compatibility__clear_scroll_region-3.snap
---
source: src/tests/integration/compatibility.rs
expression: snapshot
---
⋊> ~/c/mosaic on main ⨯ vim some-file                                                                       15:07:22
⋊> ~/c/mosaic on main ⨯                                                                                     15:07:29
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
Bye from Mosaic!█                                                                                                   
