src/tests/integration/snapshots/mosaic__tests__integration__compatibility__display_tab_characters_properly-3.snap
---
source: src/tests/integration/compatibility.rs
expression: snapshot
---
 OS: 5.9.13-arch1-1 GNU/Linux                                                                                       
 Uptime: 10 hours, 42 minutes                                                                                       
 Hostname: kingdom                                                                                                  
 Disk usage:                                                                                                        
                                                                                                                    
df: /run/user/1000/doc: Operation not permitted                                                                     
	/	321G / 514G  66%                                                                                                 
	/efi	 27M /  96M  28%                                                                                              
                                                                                                                    
 Network:                                                                                                           
                                                                                                                    
	wlp2s0  192.168.0.3                                                                                                
                                                                                                                    
[I] [20:07] kingdom:mosaic (main) |                                                                                 
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
Bye from Mosaic!█                                                                                                   
